unification of SDF versions for different contexts and MIW